[tool.poetry]
name = "crud-fastapi-async-database"
version = "0.1.0"
description = "exemplo de crud usando fastapi"
authors = ["carlos-rian <crian.rian@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
sqlalchemy = "^1.3.19"
databases = {version = "^0.3.2", extras = ["postgresql"]}
pylint = "^2.6.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
